--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --background-color: rgb(254, 255, 220);
+  --background-header: rgb(247 244 174);
+}
+
 html {
   background-color: silver;
   scroll-behavior: smooth;
@@ -7,10 +12,16 @@ html {
   background-color: white;
   max-width: 850px;
   margin: 0 auto;
+  background-color: var(--background-color);
+}
+
+header,
+footer {
+  background-color: var(--background-header);
 }
 
 .nav-list {
-  padding-left: 0px;
+  padding: 16px 0px;
   display: flex;
   justify-content: space-around;
   list-style: none;
@@ -29,6 +40,19 @@ a {
 .column-2 {
   display: flex;
   justify-content: space-around;
+}
+
+.photo-header {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: 20px 0px;
+}
+
+h2 {
+  text-align: center;
 }
 
 section {
