--- a/style.css
+++ b/style.css
@@ -8,14 +8,14 @@
 
 body {
   background-color: silver;
-  /* scroll-behavior: smooth; */
   color: var(--color-text);
   font-family: 'Kalam', cursive;
+  margin: 0;
 }
 
 .page {
   background-color: white;
-  max-width: 850px;
+  width: 850px;
   margin: 0 auto;
   background-color: var(--color-background);
 }
@@ -25,11 +25,18 @@ footer {
   background-color: var(--color-header);
 }
 
+li {
+  list-style-type: circle;
+}
+
 .nav-list {
   padding: 16px 0px;
   display: flex;
   justify-content: space-around;
-  list-style: none;
+}
+
+.nav-list > li {
+  list-style-type: none;
 }
 
 a {
@@ -37,8 +44,14 @@ a {
   color: black;
 }
 
+a:hover {
+  color: var(--color-header-head);
+  text-decoration: underline;
+}
+
 .photo {
   width: 200px;
+  border-radius: 5%;
 }
 
 .column-2 {
@@ -53,6 +66,12 @@ a {
   align-items: center;
   justify-content: space-around;
   margin: 20px 0px;
+}
+
+.div-border {
+  border: 1px solid var(--color-header-head);
+  width: 75%;
+  height: 0;
 }
 
 h2 {
@@ -78,10 +97,38 @@ section {
   height: 100%;
 }
 
+.contacts_list {
+  line-height: 32px;
+}
+
+.contacts-icon {
+  width: 25px;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
 pre {
   overflow: scroll;
 }
 
 code {
   font-family: 'Kalam', sans-serif;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 5px 0px;
+}
+
+.footer_container {
+  width: 93%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.link-github {
+  display: flex;
+  align-items: center;
 }
